changed heading 6 and text

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ Licence URI: https://www.os-templates.com/template-terms
       <ul class="nospace group grid-3">
         <li class="one_third">
           <article><a href="#"><i class="fas fa-spray-can"></i></a>
-            <h6 class="heading">Vehicula</h6>
-            <p>Nulla cursus metus non tortor erat turpis sed semper risus nisi id nunc ut congue cursus tortor aliquam.</p>
+            <h6 class="heading">Car types</h6>
+            <p> Toyota, nissan, chevy.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
