changed head 6 and text

--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
         <li class="one_third">
           <article><a href="#"><i class="fas fa-user-secret"></i></a>
-            <h6 class="heading">Porttitor</h6>
-            <p>Vehicula nisl ac porta blandit velit risus lobortis turpis sit amet lobortis sapien dui id neque suspendisse.</p>
+            <h6 class="heading">Top Foods</h6>
+            <p>pizza, burger, poutin.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
