changed l3  h6 and text

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
         <li class="one_third">
           <article><a href="#"><i class="fas fa-couch"></i></a>
-            <h6 class="heading">Pulvinar</h6>
-            <p>Vel justo mattis magna vestibulum molestie quisque sagittis in a enim in metus ultrices tristique nam semper.</p>
+            <h6 class="heading">top 3 nba players</h6>
+            <p>Kobe bryant, Michael Jordan, Lebron James.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
