changed h6 l4 and text

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
         <li class="one_third">
           <article><a href="#"><i class="fas fa-crow"></i></a>
-            <h6 class="heading">Ultricies</h6>
-            <p>Tincidunt metus nunc ornare mi at nibh ut ante est imperdiet dignissim eleifend sit amet lacinia tempor justo.</p>
+            <h6 class="heading">fun things to do</h6>
+            <p>play sports, go hiking, travelling</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
