no sure what I changed but is asking me to commit

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <li class="one_third">
           <article><a href="#"><i class="fas fa-spray-can"></i></a>
             <h6 class="heading">Car types</h6>
-            <p> Toyota, nissan, chevy.</p>
+            <p> Toyota, nissan, chevy8.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
