--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
         <li class="one_third">
           <article><a href="#"><i class="fas fa-dolly-flatbed"></i></a>
-            <h6 class="heading">Vestibulum</h6>
-            <p>Pellentesque malesuada sed et nulla sit amet nisi scelerisque consectetuer vivamus odio donec metus libero semper.</p>
+            <h6 class="heading">Team work</h6>
+            <p>Team work makes the dream work.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
