--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <header id="header" class="hoc clear">
     <div id="logo" class="fl_left"> 
       <!-- ################################################################################################ -->
-      <h1><a href="index.html">Nekmit</a></h1>
+      <h1><a href="index.html">MVP-CodeTeam Co.</a></h1>
       <!-- ################################################################################################ -->
     </div>
     <nav id="mainav" class="fl_right"> 
@@ -70,8 +70,8 @@ Licence URI: https://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <h3 class="heading">Suspendisse potenti</h3>
-      <p>Arcu mi porttitor est non felis aliquam ullamcorper sed porttitor accumsan arcu maecenas lorem elit tristique quis iaculis at euismod vel arcu donec et lorem.</p>
+      <h3 class="heading">Welcome to the Jungle</h3>
+      <p>We've got fun and games!</p>
       <footer>
         <ul class="nospace inline pushright">
           <li><a class="btn" href="#">Integer</a></li>
