--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
         <li class="one_third">
           <article><a href="#"><i class="fas fa-road"></i></a>
-            <h6 class="heading">Lobortis</h6>
-            <p>Quis suscipit ut aliquam a metus ut interdum risus id luctus consectetuer velit neque ornare quam at ornare.</p>
+            <h6 class="heading">So much fun!</h6>
+            <p>you can be yourself and enjoy the plasure life has to offer.</p>
             <footer><a href="#">More Details &raquo;</a></footer>
           </article>
         </li>
