--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <section id="services">
       <div class="sectiontitle">
-        <p class="nospace font-xs">Mauris tempor aliquam venenatis</p>
+        <p class="nospace font-xs">Don't burn yourself like a candle trying to give light</p>
         <h6 class="heading">Curabitur at odio sed enim</h6>
       </div>
       <ul class="nospace group grid-3">
