line 119 - leggo my eggo

--- a/index.html
+++ b/index.html
@@ -116,11 +116,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <section id="services">
       <div class="sectiontitle">
-<<<<<<< HEAD
-        <p class="nospace font-xs">Don't burn yourself like a candle trying to give light</p>
-=======
-        <p class="nospace font-xs">Dogs are awesome</p>
->>>>>>> e9a8ea6b1cffe2d74a1698292f8381662d687c31
+        <p class="nospace font-xs">leggo my eggo</p>
         <h6 class="heading">Curabitur at odio sed enim</h6>
       </div>
       <ul class="nospace group grid-3">
